Sonar Qube Report Code Refactoring