@@ -1,7 +1,6 @@
 package com.scheduler.batch.job.exceptionhandler;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -17,21 +16,15 @@ import com.common.artifact.ValidationError;
 public class GlobalExceptionHandler {
 	
 	@ExceptionHandler(MethodArgumentNotValidException.class)
-	public ResponseEntity<?> handleValidationException(MethodArgumentNotValidException ex, WebRequest request){
+	public ResponseEntity<ErrorResponse> handleValidationException(MethodArgumentNotValidException ex, WebRequest request){
 		List<ValidationError> errors = ex.getBindingResult()
 	            .getFieldErrors()
 	            .stream()
-	            .map(fieldError -> new ValidationError(fieldError.getField(), fieldError.getDefaultMessage()))
-	            .collect(Collectors.toList());
+	            .map(fieldError -> new ValidationError(fieldError.getField(), fieldError.getDefaultMessage())).toList();
+	            
 
 	        ErrorResponse errorResponse = new ErrorResponse("Validation failed", HttpStatus.BAD_REQUEST.value(), errors);
 	        return new ResponseEntity<>(errorResponse, HttpStatus.BAD_REQUEST);
 	}
-	
-//    @ExceptionHandler(Exception.class)
-//    public ResponseEntity<ErrorResponse> handleGlobalException(Exception ex, WebRequest request) {
-//        ErrorResponse errorResponse = new ErrorResponse("Internal Server Error", HttpStatus.INTERNAL_SERVER_ERROR.value(), null);
-//        return new ResponseEntity<>(errorResponse, HttpStatus.INTERNAL_SERVER_ERROR);
-//    }
 
 }
